# rag-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/: GETTING_STARTED.md  clean_kbs.py  debug_frames.py  debug_mcp_search.py  explore_frames.py  load_frames.py  test_mcp_frames.py  test_wikipedia_api.py
src/rag_mcp/: __init__.py  chunker.py  config.py  embedder.py  knowledge_manager.py  reranker.py  server.py  utils.py
tests/: test_chunker.py  test_knowledge_manager_hash.py  test_reranker_confidence.py  test_search_grouping.py
