[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "0.1.0"
description = "MCP server for RAG knowledge base with vector search + rerank"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
rag-mcp = "rag_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
