[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "1.0.0"
description = "MCP server for RAG knowledge base with vector search + rerank"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]",
    "openai",
    "chromadb",
    "pydantic-settings",
    "beautifulsoup4",
    "numpy",
    "tiktoken",
]

[project.scripts]
rag-mcp = "rag_mcp:main"

[project.urls]
Homepage = "https://github.com/sglwsjxh/rag-mcp"
Repository = "https://github.com/sglwsjxh/rag-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
